feat: clean architecture implemented
