# proxy/internal/entities/geo.go
@@ -1,1 +1,13 @@
 package entities
+
+type Address struct {
+	City   string `json:"city"`
+	Street string `json:"street"`
+	House  string `json:"house"`
+	Lat    string `json:"lat"`
+	Lon    string `json:"lon"`
+}
+
+type Addresses struct {
+	Addresses []*Address `json:"addresses"`
+}
